# Game-Engine-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.rc
CORE/src/: core.cpp  core.h
EDITOR/src/: main.cpp
RUNTIME/src/: main.cpp
